--- a/src/assets/style/yiren.scss
+++ b/src/assets/style/yiren.scss
@@ -184,7 +184,7 @@
         .cityTab {
             padding: 1rem 0 0 .75rem;
             font-size: 0.65rem;
-            a {
+            span {
                 border-radius: 5px;
                 width: 21%;
                 margin: 0 3% .5rem 0;
