--- a/src/assets/style/yiren.scss
+++ b/src/assets/style/yiren.scss
@@ -478,8 +478,11 @@
         &:before,&:after{ width: 12%; content: ''; background: #161616; height: 1px; position: relative; right: 9%; }
         &:after{left: 9%;}
     }
+    // .pic{
+    //     width: 4rem; height: 4rem; margin-right: 0.7rem;  //有规格时的样式
+    // }
     .pic{
-        width: 4rem; height: 4rem; margin-right: 0.7rem;
+        width: 4rem; height: 3rem; margin-right: 0.7rem;
     }
     .weui-count .weui-count__btn{ 
         border: 0;border-radius: 0; background: #f5f5f5;  vertical-align: -5px;
